[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/left_container/connections_list/ConnectionsList.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/left_container/tree.gd" type="Script" id=2]
[ext_resource path="res://scenes/left_container/file.gd" type="Script" id=3]
[ext_resource path="res://scenes/left_container/help.gd" type="Script" id=4]
[ext_resource path="res://scenes/left_container/about/About.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/left_container/edit.gd" type="Script" id=6]
[ext_resource path="res://scenes/left_container/conn_menu.gd" type="Script" id=7]
[ext_resource path="res://scenes/main_container.tres" type="Theme" id=8]
[ext_resource path="res://scenes/left_container/left_container.gd" type="Script" id=9]
[ext_resource path="res://scenes/left_container/conn_methods.gd" type="Script" id=10]
[ext_resource path="res://scenes/utility/python_watcher/PythonWatcher.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/utility/uri/URIParser.tscn" type="PackedScene" id=12]

[node name="LeftContainer" type="VBoxContainer"]
anchor_bottom = 1.0
margin_top = 5.0
margin_right = 274.0
rect_min_size = Vector2( 274, 0 )
theme = ExtResource( 8 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
margin_right = 274.0
margin_bottom = 22.0

[node name="File" type="MenuButton" parent="Menu"]
margin_right = 35.0
margin_bottom = 22.0
text = "File"
flat = false
items = [ "Open connections list", null, 0, false, false, 0, 0, null, "", false, "Exit", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 3 )

[node name="ConnectionsList" parent="Menu/File" instance=ExtResource( 1 )]

[node name="Edit" type="MenuButton" parent="Menu"]
margin_left = 39.0
margin_right = 75.0
margin_bottom = 22.0
text = "Edit"
flat = false
items = [ "Preferences", null, 0, false, false, 0, 0, null, "", false, "Theme", null, 0, false, false, 1, 0, null, "", false ]
script = ExtResource( 6 )

[node name="Help" type="MenuButton" parent="Menu"]
margin_left = 79.0
margin_right = 121.0
margin_bottom = 22.0
text = "Help"
flat = false
items = [ "About", null, 0, false, false, 0, 0, null, "", false ]
script = ExtResource( 4 )

[node name="About" parent="Menu/Help" instance=ExtResource( 5 )]

[node name="Tree" type="Tree" parent="."]
margin_top = 26.0
margin_right = 274.0
margin_bottom = 595.0
size_flags_vertical = 3
allow_rmb_select = true
hide_root = true
script = ExtResource( 2 )

[node name="ConnMenu" type="PopupMenu" parent="Tree"]
margin_right = 20.0
margin_bottom = 20.0
items = [ "Open shell", null, 0, false, false, 0, 0, null, "", false, "Open settings", null, 0, false, false, 1, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Create database", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Refresh", null, 0, false, false, 3, 0, null, "", false, "", null, 0, false, false, -1, 0, null, "", true, "Disconnect", null, 0, false, false, 4, 0, null, "", false ]
script = ExtResource( 7 )

[node name="ConnMethods" type="Node" parent="Tree"]
script = ExtResource( 10 )

[node name="PythonWatcher" parent="Tree/ConnMethods" instance=ExtResource( 11 )]

[node name="URIParser" parent="Tree/ConnMethods" instance=ExtResource( 12 )]

[connection signal="exit_pressed" from="Menu/File" to="Menu/File" method="_on_File_exit_pressed"]
[connection signal="open_connections_list_pressed" from="Menu/File" to="Menu/File" method="_on_File_open_connections_list_pressed"]
[connection signal="item_selected" from="Menu/File/ConnectionsList" to="Tree" method="_on_ConnectionsList_item_selected"]
[connection signal="about_pressed" from="Menu/Help" to="Menu/Help" method="_on_Help_about_pressed"]
[connection signal="item_double_clicked" from="Tree" to="Tree" method="_on_Tree_item_double_clicked"]
[connection signal="item_rmb_selected" from="Tree" to="Tree" method="_on_Tree_item_rmb_selected"]
[connection signal="open_shell_pressed" from="Tree" to="." method="_on_Tree_open_shell_pressed"]
[connection signal="id_pressed" from="Tree/ConnMenu" to="Tree" method="_on_ConnMenu_id_pressed"]
[connection signal="outputted" from="Tree/ConnMethods/PythonWatcher" to="Tree" method="_on_PythonWatcher_outputted"]
